--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/xcbfpq327/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12526005.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1282737617-320x200.jpg"><p align="center">确保选举可信 川普在两州提告 要一州重计票</p></a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526403.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/20201030054323632-320x200.jpg"><p align="center">分析：中共为何把官员私藏禁书列为首罪</p></a>
+<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526403.md#1" title="分析：中共为何把官员私藏禁书列为首罪""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/20201030054323632-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12526005.md#1" title="确保选举可信 川普在两州提告 要一州重计票""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1282737617-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524856.md#1" title="【独家】内部文件解密美国在华“和平队”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1227754768-600x400-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526087.md#1" title="拜登一夜离奇“翻盘” 川普猛批计票舞弊""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1283816258-320x200.jpg">&nbsp;</a>
@@ -11,14 +12,13 @@
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525212.md#1" title="大陆网文指美国大选是“正邪较量”引共鸣""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Screen-Shot-2020-11-04-at-11.07.13-am-320x200.png">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523578.md#1" title="【国会大选更新】参院还剩5席未决""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Screen-Shot-2020-11-03-at-11.36.58-PM-1-320x200.png">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524693.md#1" title="川普：停止计票是舞弊 得票率领先足以胜选""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229449771-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521384.md#1" title="盘点纽约统战组织(2)华美协进社与文化统战""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/144741-320x200.png">&nbsp;</a>
 <p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://xcbfpq327.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527058.md#1">美大选结果未明之际 韩外长周日将访华府</a><br>
-:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527001.md#1">中共喉舌罕见批评特斯拉 引关注</a><br>
+:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527058.md#1">美大选结果未明之际 韩外长周日将访华府</a><br>
+:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527001.md#1">中共喉舌罕见批评特斯拉 引关注</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526965.md#1">转发一个视频 辽宁访民姜家文被拘留10天</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526451.md#1">网易严选宣布退出“双十一”购物节活动</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526451.md#1">网易严选宣布退出“双十一”购物节活动</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526403.md#1">分析：中共为何把官员私藏禁书列为首罪</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12526005.md#1">确保选举可信 川普在两州提告 要一州重计票</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12526005.md#1">确保选举可信 川普在两州提告 要一州重计票</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12523460.md#1">蚂蚁集团暂缓上市 分析：马云恐难翻身</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524176.md#1">【翻墙必看】马云得罪王岐山？蚂蚁集团暂停上市</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,886,590 人
+!共 366,886,829 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -106,7 +106,7 @@
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/29/n12511777.md#1">【役情最前线】涉孙力军案 央视女主播证实出事</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/29/n12511870.md#1">翻拍《棋灵王》被批毁童年 中共大内宣引众怒</a><br>
 <br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526965.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/S__2736136-320x200.jpg"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526965.md#1">转发一个视频 辽宁访民姜家文被拘留10天</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523613.md#1">邢鉴再揭信阳监狱黑幕 找牢头狱霸做假证</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521879.md#1">屡遭酷刑折磨 湖南法轮功学员张春秋再被冤判</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523701.md#1">访民北京乘公交车 遭乘务员通报警方截访</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/1/n12517735.md#1">四川什邡警察骚扰老年法轮功学员 遭抵制</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12519915.md#1">法轮功学员车平平在吉林女监每天遭虐待</a><br><br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526451.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526451.md#1">网易严选宣布退出“双十一”购物节活动</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12526055.md#1">成交量下降 大陆楼市传统旺季平淡收官</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525751.md#1">华为又推新手机 网友：山寨iPhone 12</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524724.md#1">蚂蚁集团：不计息退回香港公开发售的申请股款</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523883.md#1">深圳二手房成交量连续三月下跌 10月降42%</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12523535.md#1">阿里股价下跌逾8% 蚂蚁重新上市至少推半年</a><br><br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527001.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1RK5JC-320x200.jpg"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527001.md#1">中共喉舌罕见批评特斯拉 引关注</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526403.md#1">分析：中共为何把官员私藏禁书列为首罪</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526373.md#1">中国人翻墙观美选举 关切未来是否续施压中共</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525099.md#1">山东监狱系统曾爆疫情 王文杰等5人出庭受审</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525090.md#1">第三届进博会 习近平首次不出席开幕式</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524964.md#1">蔡英文：中国经济进转折期 密切观察未来走向</a><br><br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526291.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/dd9569c0610bb699eeaecc489e15644a-320x200.png"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526291.md#1">辽宁、内蒙古同日均出现三个太阳</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524903.md#1">陕西铜川煤矿发生疑似瓦斯突出事故 4死4失踪</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524821.md#1">新疆喀什中共肺炎单日新增病例数再现新高</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521703.md#1">兰州卫健委给布病患者发健康证明 市民不满</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521218.md#1">兰州化工厂闪爆后油罐起火 浓烟直冲天际</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521167.md#1">国家管网北海LNG接收站失火 致6死3重伤</a><br><br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526731.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526731.md#1">内蒙古幼儿园教师给幼儿扎针 3人被批捕</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526544.md#1">每日三退声明精选（2020/11/04）</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523746.md#1">齐齐哈尔市场遭强拆 民众批政府违法</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521263.md#1">黑龙江现病死猪肉交易 涉事司机逃逸</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521225.md#1">每日三退声明精选（2020/11/02）</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12519419.md#1">哈尔滨今年6万人被狗咬伤 狂犬疫苗告急</a><br><br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524269.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/51e79b349dbd5a41127439c0769ad689-320x200.png"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524269.md#1">福建商学院副教授猥亵大一女生 女生反遭转学</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/30/n12513016.md#1">中共称将建文化强国 网民：它懂什么叫文化？</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/27/n12506230.md#1">汤唯开工第一天 公婆带全家人送应援车</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/27/n12504862.md#1">西安大一新生军训猝死 家属讨说法反被威胁</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/26/n12503856.md#1">高圆圆女儿抓周全场嗨翻 赵树海谈孙女眉飞色舞</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/25/n12501371.md#1">港星爆拍戏趣事：演员爱吃道具饭皆因周润发</a><br><br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526965.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/S__2736136-320x200.jpg"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526965.md#1">转发一个视频 辽宁访民姜家文被拘留10天</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523613.md#1">邢鉴再揭信阳监狱黑幕 找牢头狱霸做假证</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521879.md#1">屡遭酷刑折磨 湖南法轮功学员张春秋再被冤判</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523701.md#1">访民北京乘公交车 遭乘务员通报警方截访</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/1/n12517735.md#1">四川什邡警察骚扰老年法轮功学员 遭抵制</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12519915.md#1">法轮功学员车平平在吉林女监每天遭虐待</a><br><br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526451.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526451.md#1">网易严选宣布退出“双十一”购物节活动</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12526055.md#1">成交量下降 大陆楼市传统旺季平淡收官</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525751.md#1">华为又推新手机 网友：山寨iPhone 12</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524724.md#1">蚂蚁集团：不计息退回香港公开发售的申请股款</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523883.md#1">深圳二手房成交量连续三月下跌 10月降42%</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12523535.md#1">阿里股价下跌逾8% 蚂蚁重新上市至少推半年</a><br><br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527001.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1RK5JC-320x200.jpg"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527001.md#1">中共喉舌罕见批评特斯拉 引关注</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526373.md#1">中国人翻墙观美选举 关切未来是否续施压中共</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525099.md#1">山东监狱系统曾爆疫情 王文杰等5人出庭受审</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525090.md#1">第三届进博会 习近平首次不出席开幕式</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524964.md#1">蔡英文：中国经济进转折期 密切观察未来走向</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524424.md#1">美国大选引发中国官方及民间关注</a><br><br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526291.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/dd9569c0610bb699eeaecc489e15644a-320x200.png"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526291.md#1">辽宁、内蒙古同日均出现三个太阳</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524903.md#1">陕西铜川煤矿发生疑似瓦斯突出事故 4死4失踪</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524821.md#1">新疆喀什中共肺炎单日新增病例数再现新高</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521703.md#1">兰州卫健委给布病患者发健康证明 市民不满</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521218.md#1">兰州化工厂闪爆后油罐起火 浓烟直冲天际</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521167.md#1">国家管网北海LNG接收站失火 致6死3重伤</a><br><br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526731.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526731.md#1">内蒙古幼儿园教师给幼儿扎针 3人被批捕</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526544.md#1">每日三退声明精选（2020/11/04）</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523746.md#1">齐齐哈尔市场遭强拆 民众批政府违法</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521263.md#1">黑龙江现病死猪肉交易 涉事司机逃逸</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521225.md#1">每日三退声明精选（2020/11/02）</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12519419.md#1">哈尔滨今年6万人被狗咬伤 狂犬疫苗告急</a><br><br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524269.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/51e79b349dbd5a41127439c0769ad689-320x200.png"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524269.md#1">福建商学院副教授猥亵大一女生 女生反遭转学</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/30/n12513016.md#1">中共称将建文化强国 网民：它懂什么叫文化？</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/27/n12506230.md#1">汤唯开工第一天 公婆带全家人送应援车</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/27/n12504862.md#1">西安大一新生军训猝死 家属讨说法反被威胁</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/26/n12503856.md#1">高圆圆女儿抓周全场嗨翻 赵树海谈孙女眉飞色舞</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/25/n12501371.md#1">港星爆拍戏趣事：演员爱吃道具饭皆因周润发</a><br><br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/31/n12515304.md#1">【内幕】经营中美关系？盘点纽约统战组织(上)</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/25/n12500201.md#1">【独家】红三代揭武汉百亿假黄金局中局</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/22/n12493565.md#1">【独家】1年抗议逾百起 湛江防民如防川</a><br>
