--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,9 +13,9 @@
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525212.md#1" title="大陆网文指美国大选是“正邪较量”引共鸣""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Screen-Shot-2020-11-04-at-11.07.13-am-320x200.png">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523578.md#1" title="【国会大选更新】参院还剩5席未决""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Screen-Shot-2020-11-03-at-11.36.58-PM-1-320x200.png">&nbsp;</a>
 <p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://xcbfpq327.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527233.md#1">中共强停蚂蚁集团上市 国际投资者失去信心</a><br>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527205.md#1">组图：密歇根州计票 两党支持者场外抗议</a><br>
-:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1">【大选更新11·5】胜负难分 美多处爆发抗议</a><br>
+:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527233.md#1">中共强停蚂蚁集团上市 国际投资者失去信心</a><br>
+:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527205.md#1">组图：密歇根州计票 两党支持者场外抗议</a><br>
+:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1">【大选更新11·5】胜负难分 美多处爆发抗议</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527014.md#1">筑商标护城河 海底捞1天申请177个相关商标</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527058.md#1">美大选结果未明之际 韩外长周日将访华府</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527001.md#1">中共喉舌罕见批评特斯拉 引关注</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,888,885 人
+!共 366,889,082 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -113,10 +113,10 @@
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/24/n12498279.md#1">揭秘：拜登家族与爆料人关系是如何破裂的</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/9/24/n12426629.md#1">【独家】揭秘打压“诉江潮”的中共帮凶</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/14/n12476368.md#1">【独家】绝密证据曝光中共群体灭绝罪</a><br>
-<br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/16/n12481774.md#1">清朝痴和尚传奇：行走的市集销量“晴雨表”</a><br>
+<br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/20/n12488670.md#1">不知自己死了 一转生就能说话的张生有</a><br>
+<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/16/n12481774.md#1">清朝痴和尚传奇：行走的市集销量“晴雨表”</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/30/n12512695.md#1">夫妻不叫老公老婆 怎表卿卿我我和礼敬？</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/26/n12503920.md#1">张三丰说孝行 孝德无穷尽</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523568.md#1">被预言选中的人：川普和曹操</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520267.md#1">李世民为命定天子 四人提前道破天机</a><br>
-<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/29/n12511720.md#1">【佳人传】闺阁世界的奇伟之才——沈善宝</a><br>
 <br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/xcbfpq327/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1351518.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xcbfpq327/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/xcbfpq327/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
